Test Org - Speridian/src/objects/BA_Patient_Acceptance__c.object
<CustomObject>
    <fields>
        <fullName>ba_AcceptingBegin__c</fullName>
        <label>Accepting Age Begin</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_AcceptingEnd__c</fullName>
        <label>Accepting Age End</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_AcceptingPatients__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepting New Patients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_AllowMembers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Family Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <label>Patient Acceptance</label>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Patient Acceptance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Acceptance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>